# aoc-2024

./: .clang-format  .gitignore  CMakeLists.txt  PROBLEMS_DAILY.md  README.md
.github/workflows/: cmake.yml
include/solution/: Day00.h  Day01.h  Day02.h  Day03.h  Day04.h  Day05.h  Day06.h  Day07.h  Day08.h  Day09.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day17.h  Day18.h  Day19.h  Day20.h  Day21.h  Day22.h  Day23.h  Day24.h  Day25.h  Solution.h
include/tools/: ArgParse.h  fileread.h
include/util/: VennSpan.h  fileread.h
src/: CMakeLists.txt  main.cpp
src/solution/: CMakeLists.txt  Day00.cpp  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp  Solution.cpp
src/tools/: ArgParse.cpp  CMakeLists.txt  fileread.cpp
src/util/: ArgParse.cpp  CMakeLists.txt  VennSpan.cpp  fileread.cpp
test/: CMakeLists.txt  solutiontest.cpp  test_ElfComputer.cpp  test_argparse.cpp  test_days.cpp  test_days2024.cpp  test_vennspan.cpp
test/include/: solutiontest.h
